samples/_failures_safe/1761454097_010269_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3da6130e.c: In function ‘main’:
./samples/SAFE/__tmp_3da6130e.c:157:25: error: expected ‘)’ at end of input
  157 |     if (len > 0 && input
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_3da6130e.c:157:5: error: expected declaration or statement at end of input
  157 |     if (len > 0 && input
      |     ^~
